# digit_recognizer

./: CMakeLists.txt
core/: CMakeLists.txt
core/include/: Array.h  Delegate.h  FStream.h  IOStream.h  UniquePtr.h  Utility.h  Vector.h
data/: CMakeLists.txt
data_loader/: CMakeLists.txt
data_loader/include/: DataLoader.h
data_loader/src/: DataLoader.cpp
digit_recognizer/: CMakeLists.txt
digit_recognizer/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: Activation.h  Engine.h
engine/include/layer/: Convolution.h  Layer.h
engine/src/: Activation.cpp  Engine.cpp
engine/src/layer/: Convolution.cpp
